--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,32 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationEducation" class="method navigator-link" hash-for-method="AddEducation">AddEducation</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationSkills" class="method navigator-link" hash-for-method="verifyAddSkill(TestSkill0001, Test Skill Description 0001)">verifyAddSkill(TestSkill0001, Test Skill Description 0001)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationSkills" class="method navigator-link" hash-for-method="verifyAddSkill(TestSkill0004, Test Skill Description 0004)">verifyAddSkill(TestSkill0004, Test Skill Description 0004)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationSkills" class="method navigator-link" hash-for-method="verifyAddSkill(TestSkill0002, Test Skill Description 0002)">verifyAddSkill(TestSkill0002, Test Skill Description 0002)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationSkills" class="method navigator-link" hash-for-method="verifyAddSkill(TestSkill0005, Test Skill Description 0005)">verifyAddSkill(TestSkill0005, Test Skill Description 0005)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationSkills" class="method navigator-link" hash-for-method="verifyAddSkill(TestSkill0003, Test Skill Description 0003)">verifyAddSkill(TestSkill0003, Test Skill Description 0003)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationLicenses" class="method navigator-link" hash-for-method="aaa">aaa</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -157,62 +132,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.maven.testng.VerifyQualificationEducation</span>
+              <span class="class-name">com.maven.testng.VerifyQualificationLicenses</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AddEducation">
-                  </a> <!-- AddEducation -->
-                  <span class="method-name">AddEducation</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.maven.testng.VerifyQualificationSkills</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddSkill(TestSkill0001, Test Skill Description 0001)">
-                  </a> <!-- verifyAddSkill(TestSkill0001, Test Skill Description 0001) -->
-                  <span class="method-name">verifyAddSkill</span>
-                  <span class="parameters">(TestSkill0001, Test Skill Description 0001)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddSkill(TestSkill0004, Test Skill Description 0004)">
-                  </a> <!-- verifyAddSkill(TestSkill0004, Test Skill Description 0004) -->
-                  <span class="method-name">verifyAddSkill</span>
-                  <span class="parameters">(TestSkill0004, Test Skill Description 0004)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddSkill(TestSkill0002, Test Skill Description 0002)">
-                  </a> <!-- verifyAddSkill(TestSkill0002, Test Skill Description 0002) -->
-                  <span class="method-name">verifyAddSkill</span>
-                  <span class="parameters">(TestSkill0002, Test Skill Description 0002)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddSkill(TestSkill0005, Test Skill Description 0005)">
-                  </a> <!-- verifyAddSkill(TestSkill0005, Test Skill Description 0005) -->
-                  <span class="method-name">verifyAddSkill</span>
-                  <span class="parameters">(TestSkill0005, Test Skill Description 0005)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddSkill(TestSkill0003, Test Skill Description 0003)">
-                  </a> <!-- verifyAddSkill(TestSkill0003, Test Skill Description 0003) -->
-                  <span class="method-name">verifyAddSkill</span>
-                  <span class="parameters">(TestSkill0003, Test Skill Description 0003)</span>
+                  <a name="aaa">
+                  </a> <!-- aaa -->
+                  <span class="method-name">aaa</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -252,8 +179,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.maven.testng.VerifyLoginTest&quot;/&gt;
-      &lt;class name=&quot;com.maven.testng.VerifyQualificationSkills&quot;/&gt;
-      &lt;class name=&quot;com.maven.testng.VerifyQualificationEducation&quot;/&gt;
+      &lt;class name=&quot;com.maven.testng.VerifyQualificationLicenses&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -267,7 +193,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (3 classes)</span>
+                <span class="test-name">Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -293,44 +219,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 5245);
+data.setCell(0, 3, 4808);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyLoginErrorMessage')
-data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(1, 3, 1581);
+data.setCell(1, 1, 'aaa')
+data.setCell(1, 2, 'com.maven.testng.VerifyQualificationLicenses')
+data.setCell(1, 3, 3432);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyAddSkill')
-data.setCell(2, 2, 'com.maven.testng.VerifyQualificationSkills')
-data.setCell(2, 3, 1452);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyAddSkill')
-data.setCell(3, 2, 'com.maven.testng.VerifyQualificationSkills')
-data.setCell(3, 3, 1427);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyAddSkill')
-data.setCell(4, 2, 'com.maven.testng.VerifyQualificationSkills')
-data.setCell(4, 3, 1323);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyAddSkill')
-data.setCell(5, 2, 'com.maven.testng.VerifyQualificationSkills')
-data.setCell(5, 3, 1323);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'verifyAddSkill')
-data.setCell(6, 2, 'com.maven.testng.VerifyQualificationSkills')
-data.setCell(6, 3, 1187);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'AddEducation')
-data.setCell(7, 2, 'com.maven.testng.VerifyQualificationEducation')
-data.setCell(7, 3, 1145);
+data.setCell(2, 1, 'verifyLoginErrorMessage')
+data.setCell(2, 2, 'com.maven.testng.VerifyLoginTest')
+data.setCell(2, 3, 1633);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -363,56 +269,25 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">3923 ms</span>
+                <span class="method-start">4388 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">5508 ms</span>
+                <span class="method-start">6023 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.maven.testng.VerifyQualificationSkills</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">navigateToSkills</span>
-                <span class="method-start">10755 ms</span>
-              </div> <!-- configuration-class before -->
+              <div class="chronological-class-name">com.maven.testng.VerifyQualificationLicenses</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">verifyAddSkill(TestSkill0001, Test Skill Description 0001)</span>
-                <span class="method-start">13750 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddSkill(TestSkill0002, Test Skill Description 0002)</span>
-                <span class="method-start">15203 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddSkill(TestSkill0003, Test Skill Description 0003)</span>
-                <span class="method-start">16390 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddSkill(TestSkill0004, Test Skill Description 0004)</span>
-                <span class="method-start">17818 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddSkill(TestSkill0005, Test Skill Description 0005)</span>
-                <span class="method-start">19142 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.maven.testng.VerifyQualificationEducation</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">navigateToEducation</span>
-                <span class="method-start">20465 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">AddEducation</span>
-                <span class="method-start">22521 ms</span>
+                <span class="method-name">aaa</span>
+                <span class="method-start">10833 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">23667 ms</span>
+                <span class="method-start">14266 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
