--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,28 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/08/01 11:17:47</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@460741164</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/01 11:17:51</td>   <td>3918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginErrorMessage</td> 
-  <td>main@460741164</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/01 11:17:52</td>   <td>5503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@460741164</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/01 11:17:57</td>   <td>10750</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationSkills.navigateToSkills()[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">&gt;&gt;navigateToSkills</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@460741164</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/01 11:18:00</td>   <td>13745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">verifyAddSkill</td> 
-  <td>main@460741164</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/01 11:18:02</td>   <td>15198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">verifyAddSkill</td> 
-  <td>main@460741164</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/01 11:18:03</td>   <td>16385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">verifyAddSkill</td> 
-  <td>main@460741164</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/01 11:18:04</td>   <td>17813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">verifyAddSkill</td> 
-  <td>main@460741164</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/01 11:18:06</td>   <td>19137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">verifyAddSkill</td> 
-  <td>main@460741164</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>21/08/01 11:18:07</td>   <td>20461</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationEducation.navigateToEducation()[pri:0, instance:com.maven.testng.VerifyQualificationEducation@604c5de8]">&gt;&gt;navigateToEducation</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@460741164</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>21/08/01 11:18:09</td>   <td>22516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationEducation.AddEducation()[pri:0, instance:com.maven.testng.VerifyQualificationEducation@604c5de8]">AddEducation</td> 
-  <td>main@460741164</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/01 11:18:10</td>   <td>23662</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/02 12:23:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/02 12:23:06</td>   <td>4383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginErrorMessage</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/02 12:23:08</td>   <td>6018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/02 12:23:12</td>   <td>10828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationLicenses.aaa()[pri:0, instance:com.maven.testng.VerifyQualificationLicenses@758705fa]">aaa</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/02 12:23:16</td>   <td>14261</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
 </table>
