--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="658a60">  <td>21/08/02 12:23:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationLicenses.aaa()[pri:0, instance:com.maven.testng.VerifyQualificationLicenses@758705fa]">aaa</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/02 12:23:16</td>   <td>3433</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/02 12:23:02</td>   <td>-10828</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/02 12:23:06</td>   <td>-6445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginErrorMessage</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/02 12:23:08</td>   <td>-4810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/03 13:59:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationLicenses.VerifyAddLicense()[pri:0, instance:com.maven.testng.VerifyQualificationLicenses@906d29b]">VerifyAddLicense</td> 
+  <td>main@69062746</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/03 13:59:37</td>   <td>985</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@ebaa6cb]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@69062746</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/03 13:59:23</td>   <td>-13105</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@ebaa6cb]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@69062746</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/03 13:59:33</td>   <td>-3236</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationLicenses.navigateToLicenses()[pri:0, instance:com.maven.testng.VerifyQualificationLicenses@906d29b]">&gt;&gt;navigateToLicenses</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@69062746</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/03 13:59:27</td>   <td>-9342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@ebaa6cb]">verifyLoginErrorMessage</td> 
+  <td>main@69062746</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/03 13:59:28</td>   <td>-7736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@ebaa6cb]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@69062746</td>   <td></td> </tr>
 </table>
